# shrd.sh

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SELF_HOSTING.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  release-cli.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wrangler.toml  wrangler.toml.example
apps/api/src/: auth.ts  cache.ts  d1.ts  html.ts  idempotency.ts  index.test.ts  index.ts  integration.test.ts  routes.ts  scheduled.ts  stats.ts  storage.ts  types.ts
apps/api/test/: html.test.ts  integration.test.ts  sdk.test.ts  shared.test.ts  unit.test.ts
apps/web/: package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/src/: app.css  routeTree.gen.ts
apps/web/src/lib/: auth-client.ts
apps/web/src/routes/: $id.tsx  __root.tsx  dashboard.tsx  index.tsx
cli/: Cargo.toml
cli/assets/: shrd-skill.txt
cli/src/: main.rs
tests/: integration.sh
