[package]
name = "shrd"
version = "0.1.0"
edition = "2021"
authors = ["Dirk Beukes"]
description = "Share anything, instantly. CLI for shrd.sh"
license = "MIT"
repository = "https://github.com/stoff/shrd"
keywords = ["cli", "share", "pastebin", "pipe"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
arboard = { version = "3.4", optional = true }
ring = "0.17"
base64 = "0.22"
colored = "2.1"
atty = "0.2"

[features]
default = ["clipboard"]
clipboard = ["arboard"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
